--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -54,7 +54,7 @@
     -webkit-transition: none;
     transition: none;
     padding: 2rem 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
+    /* color: rgba(255, 255, 255, 0.5); */
   }
   #mainNav .nav-link:hover {
     color: rgba(255, 255, 255, 0.75);
@@ -314,5 +314,3 @@ a:focus, a:hover {
 footer {
   padding: 5rem 0;
 }
-
-
